--- a/books/golang-io-package/config.yaml
+++ b/books/golang-io-package/config.yaml
@@ -1,7 +1,7 @@
 title: "Goから学ぶI/O"
 summary: "GoにはI/Oに関わるパッケージが数多く存在します。io, os, bufio, fmtなどなど……。これらの立ち位置や、I/O実行の裏で何が起こっているのか本当に理解していますか？この本では、この問への答えをまとめました。"
 topics: ["go"]
-published: false
+published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
