表紙やconfigを追加

--- a/books/golang-concurrency/config.yaml
+++ b/books/golang-concurrency/config.yaml
@@ -1,6 +1,14 @@
-title: "並行処理"
-summary: ""
-topics: []
+title: "Goでの並行処理を徹底解剖！"
+summary: "並行処理をうまく使うのは難易度が高めです。
+それゆえに、go文とチャネルについて基本的な文法書で知った後「並行処理ちゃんとできる！」の段階まで自力でたどり着くのは大変でしょう。
+
+この本は、
+*「並行処理ってやって何が嬉しいの？」
+*「ゴールーチンとかチャネルとかって一体何者？」
+*「ゴールーチンやチャネルを使ったうまいコードの書き方が知りたい！」
+*「Goランタイムで並行処理をどううまく処理しているか知りたい！」
+といった要望にお答えする、「Goでの並行処理」に関連した事柄について網羅的・徹底的に書きまくったものです。"
+topics: ["go"]
 published: false
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
