並行処理本を公開に設定

--- a/books/golang-concurrency/config.yaml
+++ b/books/golang-concurrency/config.yaml
@@ -14,7 +14,7 @@ summary: "並行処理をうまく使うのは難易度が高めです。
 
 といった要望にお答えする、「Goでの並行処理」に関連した事柄について網羅的・徹底的に書きまくったものです。"
 topics: ["go"]
-published: false
+published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
