gRPC本を公開設定に変更

--- a/books/golang-grpc-starting/config.yaml
+++ b/books/golang-grpc-starting/config.yaml
@@ -6,7 +6,7 @@ summary: "gRPCは主にバックエンド、特にマイクロサービス同士
 この本では、gRPCはそもそもどんなコンセプトで作られた通信方式なのかから、Goでの具体的な実装ノウハウ、AWSにデプロイするための設定までを通貫して解説することで、
 「gRPC全くわからない」という人が「自分で実装して動かせそうな気がする……！」と思える段階までたどり着けるようにしました。"
 topics: ["go", "grpc"]
-published: false
+published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
