context本のGo1.21対応を追加

--- a/books/golang-context/config.yaml
+++ b/books/golang-context/config.yaml
@@ -17,8 +17,11 @@ chapters:
   - cancelchain
   - deadline
   - err
+  - cause
+  - afterfunc
   - value
   - appliedvalue
+  - nocancel
   - usage
   - pkgdesign
   - internal
